@@ -1,5 +1,10 @@
 2010-01-07  Romain Francois <francoisromain@free.fr>
 
+	* src/Rcpp/Promise.h: new class Rcpp::Promise to manage
+	promises (PROMSXP). only read access so far (no way to force
+	the promise)
+	* src/Promise.cpp: implementation
+
 	* src/Rcpp/RObject.h: the result of attr is now an RObject
 	rather than a SEXP. This does not change previous behavior
 	because of the implicit conversion
